--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
     "start": "next start",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && rm -rf .next/ && npm install && npm run dev"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/nextjs-material-kit.git"
-  },
   "keywords": [
     "next",
     "nextjs",
@@ -26,16 +22,12 @@
     "material-kit-react",
     "next-material-kit"
   ],
-  "author": "Creative Tim",
+  "author": "Lucas Ventura",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/nextjs-material-kit/issues"
-  },
-  "homepage": "https://demos.creative-tim.com/nextjs-material-kit",
   "dependencies": {
-    "@material-ui/core": "4.9.13",
-    "@material-ui/icons": "4.9.1",
-    "@zeit/next-sass": "1.0.1",
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "latest",
+    "@zeit/next-sass": "^1.0.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "classnames": "2.2.6",
@@ -43,8 +35,8 @@
     "gray-matter": "^4.0.2",
     "moment": "2.25.3",
     "mongodb": "^3.6.4",
-    "next": "^10.1.3",
-    "next-auth": "^3.2.0",
+    "next": "latest",
+    "next-auth": "latest",
     "next-compose-plugins": "2.2.0",
     "next-images": "1.3.1",
     "next-mdx-remote": "^2.1.3",
@@ -53,14 +45,13 @@
     "nouislider": "14.4.0",
     "path": "0.12.7",
     "prop-types": "15.7.2",
-    "react": "16.13.1",
+    "react": "latest",
     "react-datetime": "2.16.3",
-    "react-dom": "16.13.1",
+    "react-dom": "latest",
     "react-markdown": "^5.0.3",
     "react-slick": "0.25.2",
     "react-swipeable-views": "0.13.9",
     "styled-components": "5.1.0",
-    "webpack": "4.43.0"
-  },
-  "devDependencies": {}
+    "webpack": "^5.38.1"
+  }
 }
