- Cluster all connections with database on one file; - Create icons of actions; - Delete class.

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGODB_URI=mongodb+srv://share-info:Sh4re-1nfo@share-info.k4fgs.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_DB=share-info
 GITHUB_ID=40600c77da1c49fcde4d
 GITHUB_SECRET=ad47c792aeda3abd19ba1110957adffc8c84744d
 NEXTAUTH_URL=https://facul-project.vercel.app/
