--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "axios": "^0.21.4",
+    "bson-ext": "^4.0.2",
     "classnames": "2.3.1",
     "dns": "file:./mock/dns",
+    "kerberos": "^1.1.7",
     "moment": "2.29.1",
     "mongodb": "^4.1.2",
+    "mongodb-client-encryption": "^1.2.7",
     "net": "^1.0.2",
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
@@ -63,6 +66,7 @@
     "react-dom": "17.0.2",
     "react-markdown": "^7.0.1",
     "react-slick": "0.28.1",
+    "snappy": "^7.0.5",
     "styled-components": "5.3.0",
     "tls": "^0.0.1",
     "webpack": "^5.56.1"
