--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
   "dependencies": {
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "@next-auth/mongodb-adapter": "^0.0.2-next.285",
     "axios": "^0.21.4",
-    "bson-ext": "^4.0.2",
     "classnames": "2.3.1",
     "kerberos": "^1.1.7",
     "moment": "2.29.1",
-    "mongodb": "^4.1.2",
+    "mongodb": "^3.7.3",
     "mongodb-client-encryption": "^1.2.7",
     "net": "^1.0.2",
     "next": "^11.1.2",
@@ -57,6 +57,7 @@
     "next-transpile-modules": "^8.0.0",
     "nextjs-redirect": "5.0.2",
     "node-sass": "5.0.0",
+    "nodemailer": "^6.7.0",
     "nouislider": "15.1.0",
     "path": "0.12.7",
     "prop-types": "15.7.2",
