--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@material-ui/icons": "4.11.2",
     "@next-auth/mongodb-adapter": "^0.0.2-next.285",
     "axios": "^0.21.4",
+    "chart.js": "^3.6.0",
     "classnames": "2.3.1",
     "kerberos": "^1.1.7",
     "moment": "2.29.1",
@@ -62,6 +63,7 @@
     "path": "0.12.7",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-markdown": "^7.0.1",
