--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "@next-auth/mongodb-adapter": "^0.0.2-next.285",
+    "@react-pdf/renderer": "^2.1.1",
     "axios": "^0.21.4",
     "chart.js": "^3.6.0",
     "classnames": "2.3.1",
@@ -68,7 +69,9 @@
     "react-dom": "17.0.2",
     "react-markdown": "^7.0.1",
     "react-material-file-upload": "^0.0.4",
+    "react-pdf": "^5.7.2",
     "react-slick": "0.28.1",
+    "request": "^2.88.2",
     "snappy": "^7.0.5",
     "styled-components": "5.3.0",
     "tls": "^0.0.1",
