--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-material-file-upload": "^0.0.4",
     "react-pdf": "^5.7.2",
     "react-slick": "0.28.1",
+    "rehype-raw": "^6.1.1",
     "request": "^2.88.2",
     "snappy": "^7.0.5",
     "styled-components": "5.3.0",
