--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "@next-auth/mongodb-adapter": "^0.0.2-next.285",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/react-paypal-js": "^7.7.0",
     "@react-pdf/renderer": "^2.1.1",
     "axios": "^0.21.4",
     "chart.js": "^3.6.0",
